--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,144 +1,129 @@
-name: Deploy Crawler
+name: Build and Deploy Crawler
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: strandnerd-crawler
+    branches: ['main']
+  pull_request:
+    branches: ['main']
 
 jobs:
-  build-and-deploy:
+  test:
+    name: Run Tests
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-      
+    
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Log in to Container Registry
-      uses: docker/login-action@v3
+    - name: Set up Go
+      uses: actions/setup-go@v5
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        go-version: '1.21'
 
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
+    - name: Install dependencies
+      run: go mod download
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+    - name: Run tests
+      run: go test -v -race ./...
 
-    - name: Deploy to server
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.DEPLOY_HOST }}
-        username: ${{ secrets.DEPLOY_USER }}
-        key: ${{ secrets.DEPLOY_SSH_KEY }}
-        port: ${{ secrets.DEPLOY_PORT || 22 }}
-        script: |
-          # Navigate to deployment directory
-          cd /opt/strandnerd-crawler || { echo "Deployment directory not found"; exit 1; }
-          
-          # Create environment file if it doesn't exist
-          if [ ! -f .env ]; then
-            echo "Creating .env file..."
-            cat > .env << EOF
-          CMS_BASE_URL=${{ secrets.CMS_BASE_URL }}
-          ACCESS_TOKEN=${{ secrets.ACCESS_TOKEN }}
-          LOG_LEVEL=info
-          FEED_REFRESH_INTERVAL=5
-          REQUEST_TIMEOUT=30
-          MAX_CONCURRENT_CRAWLS=3
-          USER_AGENT=StrandNerd-Crawler/1.0
-          EOF
-          fi
-          
-          # Pull the latest image
-          echo "Pulling latest crawler image..."
-          docker pull ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-          
-          # Update docker-compose.prod.yml with the new image
-          echo "Updating docker-compose configuration..."
-          cat > docker-compose.prod.yml << 'EOF'
-          version: '3.8'
-          
-          services:
-            crawler:
-              image: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-              container_name: strandnerd-crawler
-              restart: unless-stopped
-              env_file: .env
-              command: ["-interval", "300"]
-              labels:
-                - "project=strandnerd"
-                - "service=crawler"
-                - "environment=production"
-              logging:
-                driver: "json-file"
-                options:
-                  max-size: "10m"
-                  max-file: "3"
-              deploy:
-                resources:
-                  limits:
-                    memory: 256M
-                    cpus: '0.5'
-                  reservations:
-                    memory: 128M
-                    cpus: '0.25'
-          EOF
-          
-          # Stop and remove existing container
-          echo "Stopping existing crawler..."
-          docker-compose -f docker-compose.prod.yml down || true
-          
-          # Remove old images to save space (keep latest)
-          echo "Cleaning up old images..."
-          docker image prune -f --filter "until=24h" || true
-          
-          # Start the new container
-          echo "Starting new crawler..."
-          docker-compose -f docker-compose.prod.yml up -d
-          
-          # Wait a moment and check if container is running
-          sleep 5
-          if docker-compose -f docker-compose.prod.yml ps | grep -q "Up"; then
-            echo "✅ Crawler deployment successful!"
-            docker-compose -f docker-compose.prod.yml logs --tail 10 crawler
-          else
-            echo "❌ Crawler deployment failed!"
-            docker-compose -f docker-compose.prod.yml logs --tail 20 crawler
-            exit 1
-          fi
+  only-build:
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/main'
 
-    - name: Deployment notification
-      if: always()
-      run: |
-        if [ "${{ job.status }}" == "success" ]; then
-          echo "🚀 Crawler deployed successfully to production!"
-        else
-          echo "❌ Crawler deployment failed!"
-        fi
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: |
+          docker build -t strandnerd-crawler:${{ github.sha }} .
+          echo "✅ Crawler Docker image built successfully"
+
+      - name: Build Summary
+        run: |
+          echo "🎉 Build completed successfully for branch: ${{ github.ref_name }}"
+          echo "📦 Image built: strandnerd-crawler:${{ github.sha }}"
+          echo "✅ Ready for merge to main branch"
+
+  build-and-deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    environment: production
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure Docker for GCR
+        run: gcloud auth configure-docker
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/strandnerd-crawler:latest .
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/strandnerd-crawler:latest
+
+      - name: Deploy on VM via SSH
+        env:
+          VM_IP: ${{ secrets.VM_IP }}
+          VM_USER: ${{ secrets.VM_USER }}
+          VM_SSH_KEY: ${{ secrets.VM_SSH_KEY }}
+        run: |
+          echo "$VM_SSH_KEY" > key.pem
+          chmod 600 key.pem
+          
+          # Copy docker-compose.prod.yml to VM as docker-compose.yml
+          scp -o StrictHostKeyChecking=no -i key.pem docker-compose.prod.yml $VM_USER@$VM_IP:/home/strandnerd/crawler/docker-compose.yml
+          
+          # Deploy the crawler
+          ssh -o StrictHostKeyChecking=no -i key.pem $VM_USER@$VM_IP "
+            cd /home/strandnerd/crawler && 
+            docker compose pull &&
+            docker compose up -d --pull always && 
+            
+            # Wait for service to be ready
+            echo \"Waiting for crawler service to be ready...\"
+            sleep 10
+            
+            # Check service status
+            docker compose ps
+            
+            # Verify crawler container is running
+            max_attempts=30
+            attempts=0
+            
+            while true; do
+              container_status=\$(docker compose ps -q crawler | xargs docker inspect --format='{{.State.Status}}' 2>/dev/null || echo 'not_found')
+              
+              if [ \"\$container_status\" = \"running\" ]; then
+                echo \"Crawler is running successfully\"
+                break
+              fi
+              
+              attempts=\$((attempts + 1))
+              if [ \$attempts -ge \$max_attempts ]; then
+                echo \"Error: Crawler failed to start after \$max_attempts attempts\"
+                echo \"Container status: \$container_status\"
+                docker compose logs crawler --tail=20
+                exit 1
+              fi
+              
+              echo \"Crawler status: \$container_status (attempt \$attempts/\$max_attempts)\"
+              sleep 5
+            done
+            
+            echo \"Deployment completed successfully\"
+            docker compose logs crawler --tail=10
+          "
