--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,6 +7,8 @@ services:
     restart: unless-stopped
     env_file: .env
     command: ["-interval", "300"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     labels:
       - "project=strandnerd"
       - "service=crawler"
