--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,10 @@ services:
     env_file: .env
     volumes:
       # Bind local tenants.yml configuration file
-      - ./tenants.yml:/app/tenants.yml:ro
+      - type: bind
+        source: ${PWD}/tenants.yml
+        target: /app/tenants.yml
+        read_only: true
     command: ["-interval", "300"]
     extra_hosts:
       - "host.docker.internal:host-gateway"
