refact: update with new CMS api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     container_name: strandnerd-crawler
     restart: unless-stopped
+    volumes:
+      - ./tenants.yml:/app/tenants.yml:ro
     environment:
       # CMS API Configuration (legacy - fallback if no tenants.yml)
       CMS_BASE_URL: ${CMS_BASE_URL:-http://localhost}
